bindings/rust/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#![allow(non_camel_case_types, non_snake_case, non_upper_case_globals)]

pub type vision_ui_switch_changed_cb = ::std::option::Option<
    unsafe extern "C" fn(ui: *mut vision_ui_t, value: bool, user_data: *mut ::std::os::raw::c_void),
>;
pub type vision_ui_slider_changed_cb = ::std::option::Option<
    unsafe extern "C" fn(ui: *mut vision_ui_t, value: i16, user_data: *mut ::std::os::raw::c_void),
>;
pub type vision_ui_scene_cb = ::std::option::Option<
    unsafe extern "C" fn(ui: *mut vision_ui_t, user_data: *mut ::std::os::raw::c_void),
>;
#[doc = " Font configuration passed to the public font setter and driver APIs."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_font_t {
    #[doc = " Backend font object, such as a u8g2 font pointer."]
    pub font: *const ::std::os::raw::c_void,
    #[doc = " Adjusts text metrics upward when the font baseline sits too low."]
    pub top_compensation: i8,
    #[doc = " Adjusts text metrics downward when the font clips or sits too high."]
    pub bottom_compensation: i8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_font_t"][::std::mem::size_of::<vision_ui_font_t>() - 16usize];
    ["Alignment of vision_ui_font_t"][::std::mem::align_of::<vision_ui_font_t>() - 8usize];
    ["Offset of field: vision_ui_font_t::font"]
        [::std::mem::offset_of!(vision_ui_font_t, font) - 0usize];
    ["Offset of field: vision_ui_font_t::top_compensation"]
        [::std::mem::offset_of!(vision_ui_font_t, top_compensation) - 8usize];
    ["Offset of field: vision_ui_font_t::bottom_compensation"]
        [::std::mem::offset_of!(vision_ui_font_t, bottom_compensation) - 9usize];
};
#[doc = " Shared bitmap pack used by the list icon renderer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_list_icon_t {
    #[doc = " Header bitmap for a plain list container."]
    pub list_header: *const u8,
    #[doc = " Header bitmap for a switch item."]
    pub switch_header: *const u8,
    #[doc = " Header bitmap for a slider item."]
    pub slider_header: *const u8,
    #[doc = " Header bitmap for other list item styles."]
    pub default_header: *const u8,
    #[doc = " Footer bitmap for an enabled switch item."]
    pub switch_on_footer: *const u8,
    #[doc = " Footer bitmap for a disabled switch item."]
    pub switch_off_footer: *const u8,
    #[doc = " Footer bitmap for a slider item."]
    pub slider_footer: *const u8,
    #[doc = " Shared width of header bitmaps."]
    pub header_width: usize,
    #[doc = " Shared height of header bitmaps."]
    pub header_height: usize,
    #[doc = " Shared width of footer bitmaps."]
    pub footer_width: usize,
    #[doc = " Shared height of footer bitmaps."]
    pub footer_height: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_list_icon_t"][::std::mem::size_of::<vision_ui_list_icon_t>() - 88usize];
    ["Alignment of vision_ui_list_icon_t"]
        [::std::mem::align_of::<vision_ui_list_icon_t>() - 8usize];
    ["Offset of field: vision_ui_list_icon_t::list_header"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, list_header) - 0usize];
    ["Offset of field: vision_ui_list_icon_t::switch_header"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, switch_header) - 8usize];
    ["Offset of field: vision_ui_list_icon_t::slider_header"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, slider_header) - 16usize];
    ["Offset of field: vision_ui_list_icon_t::default_header"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, default_header) - 24usize];
    ["Offset of field: vision_ui_list_icon_t::switch_on_footer"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, switch_on_footer) - 32usize];
    ["Offset of field: vision_ui_list_icon_t::switch_off_footer"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, switch_off_footer) - 40usize];
    ["Offset of field: vision_ui_list_icon_t::slider_footer"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, slider_footer) - 48usize];
    ["Offset of field: vision_ui_list_icon_t::header_width"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, header_width) - 56usize];
    ["Offset of field: vision_ui_list_icon_t::header_height"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, header_height) - 64usize];
    ["Offset of field: vision_ui_list_icon_t::footer_width"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, footer_width) - 72usize];
    ["Offset of field: vision_ui_list_icon_t::footer_height"]
        [::std::mem::offset_of!(vision_ui_list_icon_t, footer_height) - 80usize];
};
#[doc = " Shared bitmap pack used by the list icon renderer."]
pub type vision_ui_icon_t = vision_ui_list_icon_t;
pub const vision_ui_action_t_UiActionNone: vision_ui_action_t = 0;
pub const vision_ui_action_t_UiActionGoPrev: vision_ui_action_t = 1;
pub const vision_ui_action_t_UiActionGoNext: vision_ui_action_t = 2;
pub const vision_ui_action_t_UiActionEnter: vision_ui_action_t = 3;
pub const vision_ui_action_t_UiActionExit: vision_ui_action_t = 4;
#[doc = " High-level input actions consumed by Vision UI."]
pub type vision_ui_action_t = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_notification_t {
    pub content: *const ::std::os::raw::c_char,
    pub span: u16,
    pub y_notification: f32,
    pub y_notification_trg: f32,
    pub w_notification: f32,
    pub w_notification_trg: f32,
    pub is_running: bool,
    pub time_start: u32,
    pub time: u32,
    pub is_dismissing: bool,
    pub dismiss_start: u32,
    pub pending_content: *const ::std::os::raw::c_char,
    pub pending_span: u16,
    pub has_pending: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_notification_t"]
        [::std::mem::size_of::<vision_ui_notification_t>() - 64usize];
    ["Alignment of vision_ui_notification_t"]
        [::std::mem::align_of::<vision_ui_notification_t>() - 8usize];
    ["Offset of field: vision_ui_notification_t::content"]
        [::std::mem::offset_of!(vision_ui_notification_t, content) - 0usize];
    ["Offset of field: vision_ui_notification_t::span"]
        [::std::mem::offset_of!(vision_ui_notification_t, span) - 8usize];
    ["Offset of field: vision_ui_notification_t::y_notification"]
        [::std::mem::offset_of!(vision_ui_notification_t, y_notification) - 12usize];
    ["Offset of field: vision_ui_notification_t::y_notification_trg"]
        [::std::mem::offset_of!(vision_ui_notification_t, y_notification_trg) - 16usize];
    ["Offset of field: vision_ui_notification_t::w_notification"]
        [::std::mem::offset_of!(vision_ui_notification_t, w_notification) - 20usize];
    ["Offset of field: vision_ui_notification_t::w_notification_trg"]
        [::std::mem::offset_of!(vision_ui_notification_t, w_notification_trg) - 24usize];
    ["Offset of field: vision_ui_notification_t::is_running"]
        [::std::mem::offset_of!(vision_ui_notification_t, is_running) - 28usize];
    ["Offset of field: vision_ui_notification_t::time_start"]
        [::std::mem::offset_of!(vision_ui_notification_t, time_start) - 32usize];
    ["Offset of field: vision_ui_notification_t::time"]
        [::std::mem::offset_of!(vision_ui_notification_t, time) - 36usize];
    ["Offset of field: vision_ui_notification_t::is_dismissing"]
        [::std::mem::offset_of!(vision_ui_notification_t, is_dismissing) - 40usize];
    ["Offset of field: vision_ui_notification_t::dismiss_start"]
        [::std::mem::offset_of!(vision_ui_notification_t, dismiss_start) - 44usize];
    ["Offset of field: vision_ui_notification_t::pending_content"]
        [::std::mem::offset_of!(vision_ui_notification_t, pending_content) - 48usize];
    ["Offset of field: vision_ui_notification_t::pending_span"]
        [::std::mem::offset_of!(vision_ui_notification_t, pending_span) - 56usize];
    ["Offset of field: vision_ui_notification_t::has_pending"]
        [::std::mem::offset_of!(vision_ui_notification_t, has_pending) - 58usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_alert_t {
    pub content: *const ::std::os::raw::c_char,
    pub span: u16,
    pub y_alert: f32,
    pub y_alert_trg: f32,
    pub w_alert: f32,
    pub w_alert_trg: f32,
    pub is_running: bool,
    pub time_start: u32,
    pub time: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_alert_t"][::std::mem::size_of::<vision_ui_alert_t>() - 40usize];
    ["Alignment of vision_ui_alert_t"][::std::mem::align_of::<vision_ui_alert_t>() - 8usize];
    ["Offset of field: vision_ui_alert_t::content"]
        [::std::mem::offset_of!(vision_ui_alert_t, content) - 0usize];
    ["Offset of field: vision_ui_alert_t::span"]
        [::std::mem::offset_of!(vision_ui_alert_t, span) - 8usize];
    ["Offset of field: vision_ui_alert_t::y_alert"]
        [::std::mem::offset_of!(vision_ui_alert_t, y_alert) - 12usize];
    ["Offset of field: vision_ui_alert_t::y_alert_trg"]
        [::std::mem::offset_of!(vision_ui_alert_t, y_alert_trg) - 16usize];
    ["Offset of field: vision_ui_alert_t::w_alert"]
        [::std::mem::offset_of!(vision_ui_alert_t, w_alert) - 20usize];
    ["Offset of field: vision_ui_alert_t::w_alert_trg"]
        [::std::mem::offset_of!(vision_ui_alert_t, w_alert_trg) - 24usize];
    ["Offset of field: vision_ui_alert_t::is_running"]
        [::std::mem::offset_of!(vision_ui_alert_t, is_running) - 28usize];
    ["Offset of field: vision_ui_alert_t::time_start"]
        [::std::mem::offset_of!(vision_ui_alert_t, time_start) - 32usize];
    ["Offset of field: vision_ui_alert_t::time"]
        [::std::mem::offset_of!(vision_ui_alert_t, time) - 36usize];
};
pub const vision_ui_list_item_type_t_ListItem: vision_ui_list_item_type_t = 0;
pub const vision_ui_list_item_type_t_TitleItem: vision_ui_list_item_type_t = 1;
pub const vision_ui_list_item_type_t_IconItem: vision_ui_list_item_type_t = 2;
pub const vision_ui_list_item_type_t_SwitchItem: vision_ui_list_item_type_t = 3;
pub const vision_ui_list_item_type_t_SliderItem: vision_ui_list_item_type_t = 4;
pub const vision_ui_list_item_type_t_UserItem: vision_ui_list_item_type_t = 5;
pub type vision_ui_list_item_type_t = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_list_item_t {
    pub type_: vision_ui_list_item_type_t,
    pub icon_view_mode: bool,
    pub owns_child_list: bool,
    pub content: *const ::std::os::raw::c_char,
    pub text_scroll_anchor: u32,
    pub scroll_bar_top: f32,
    pub scroll_bar_top_velocity: f32,
    pub scroll_bar_top_trg: f32,
    pub scroll_bar_height: f32,
    pub scroll_bar_height_velocity: f32,
    pub scroll_bar_height_trg: f32,
    pub scroll_bar_scale_part: f32,
    pub scroll_bar_scale_part_trg: f32,
    pub scroll_bar_top_px: i16,
    pub scroll_bar_height_px: i16,
    pub y_list_item: f32,
    pub y_list_item_trg: f32,
    pub icon_scroll_offset: f32,
    pub icon_scroll_offset_velocity: f32,
    pub icon_scroll_offset_trg: f32,
    pub layer: u8,
    pub child_num: u8,
    pub capacity: usize,
    pub child_list_item: *mut *mut vision_ui_list_item_t,
    pub parent: *mut vision_ui_list_item_t,
    pub owned_next: *mut vision_ui_list_item_t,
}
